--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "ai": "^3.0.24",
+    "copy-to-clipboard": "^3.3.3",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
