--- a/package.json
+++ b/package.json
@@ -1,34 +1,41 @@
 {
-  "name": "business-email",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@google/generative-ai": "^0.7.1",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.15",
-    "ai": "^3.0.24",
-    "copy-to-clipboard": "^3.3.3",
-    "next": "14.2.2",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-loader-spinner": "^6.1.6"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.2",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "business-email",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "prepare": "awesome install"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@google/generative-ai": "^0.7.1",
+        "@mui/icons-material": "^5.15.15",
+        "@mui/material": "^5.15.15",
+        "ai": "^3.0.24",
+        "copy-to-clipboard": "^3.3.3",
+        "next": "14.2.2",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-loader-spinner": "^6.1.6"
+    },
+    "devDependencies": {
+        "@ascen/awesome": "^1.1.3",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.2",
+        "lint-staged": "^15.2.2",
+        "postcss": "^8",
+        "prettier": "^3.2.5",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    },
+    "lint-staged": {
+        "./**/**/**/**/**/**/**/**/**/**/**/*": "prettier --write  --ignore-unknown"
+    }
 }
