--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
         "@mui/icons-material": "^5.15.15",
         "@mui/material": "^5.15.15",
         "ai": "^3.0.24",
+        "axios": "^1.6.8",
+        "bcryptjs": "^2.4.3",
         "copy-to-clipboard": "^3.3.3",
+        "mongoose": "^8.3.2",
         "next": "14.2.2",
+        "next-auth": "^4.24.7",
         "react": "^18",
         "react-dom": "^18",
         "react-loader-spinner": "^6.1.6"
