--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     },
     "devDependencies": {
         "@ascen/awesome": "^1.1.3",
+        "@commitlint/cli": "^19.3.0",
+        "@commitlint/config-conventional": "^19.2.2",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
