--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "axios": "^1.6.8",
         "bcryptjs": "^2.4.3",
         "copy-to-clipboard": "^3.3.3",
+        "jotai": "^2.8.0",
         "mongoose": "^8.3.2",
         "next": "14.2.2",
         "next-auth": "^4.24.7",
