--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "mongoose": "^8.3.2",
         "next": "14.2.2",
         "next-auth": "^4.24.7",
+        "next-themes": "^0.3.0",
         "react": "^18",
         "react-dom": "^18",
         "react-loader-spinner": "^6.1.6"
