--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "next-themes": "^0.3.0",
         "react": "^18",
         "react-dom": "^18",
-        "react-loader-spinner": "^6.1.6"
+        "react-loader-spinner": "^6.1.6",
+        "vercel": "^34.1.5"
     },
     "devDependencies": {
         "@ascen/awesome": "^1.1.3",
