--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
     "name": "business-email",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
+    "bin": {
+        "secura": "./secura.ts"
+    },
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -18,6 +22,7 @@
         "ai": "^3.0.24",
         "axios": "^1.6.8",
         "bcryptjs": "^2.4.3",
+        "clsx": "^2.1.1",
         "copy-to-clipboard": "^3.3.3",
         "jotai": "^2.8.0",
         "mongoose": "^8.3.2",
@@ -27,7 +32,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-loader-spinner": "^6.1.6",
-        "vercel": "^34.1.5"
+        "vercel": "^32.3.0"
     },
     "devDependencies": {
         "@ascen/awesome": "^1.1.3",
