--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "next-themes": "^0.3.0",
         "react": "^18",
         "react-dom": "^18",
+        "react-hook-form": "^7.51.3",
         "react-loader-spinner": "^6.1.6",
         "vercel": "^32.3.0"
     },
