fix: remove dotenv

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@google/generative-ai": "^0.7.1",
         "@mui/icons-material": "^5.15.15",
         "@mui/material": "^5.15.15",
+        "@next/env": "^14.2.3",
         "@prisma/client": "^5.13.0",
         "ai": "^3.0.24",
         "axios": "^1.6.8",
@@ -26,7 +27,6 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "copy-to-clipboard": "^3.3.3",
-        "dotenv": "^16.4.5",
         "jotai": "^2.8.0",
         "lucide-react": "^0.378.0",
         "mongoose": "^8.3.2",
