--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "prepare": "awesome install"
+        "prepare": "awesome install",
+        "mark:copyright": "ts-node ./secura.ts"
     },
     "dependencies": {
         "@emotion/react": "^11.11.4",
@@ -54,6 +55,7 @@
         "postcss": "^8",
         "prettier": "^3.2.5",
         "tailwindcss": "^3.4.1",
+        "ts-node": "^10.9.2",
         "typescript": "^5"
     },
     "lint-staged": {
